--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -62,3 +62,5 @@
 @import 'components/maphead';
 @import 'components/directory';
 @import 'components/hero';
+@import 'components/home';
+@import 'components/experience-tile';
