--- a/frontend2/src/templates/homepage.html
+++ b/frontend2/src/templates/homepage.html
@@ -59,7 +59,7 @@
     <!-- Move to bottom with .hero-inner--is-bottom !-->
     <div class="hero-inner hero-inner--is-faded ">
         <div class="hero-action">
-            <h1>Die Einkaufsstadt, die alles hat</h1>
+            <h1>Heidenheim - Die Einkaufsstadt, die alles hat</h1>
             <form action="/" class="search" method="get">
                 <input class="search-input" placeholder="Suchen ..." type="text"/>
                 <button class="search-submit" type="submit">
@@ -92,7 +92,152 @@
         "Skyline Dreams" von <a href="#">Philipp Reiner</a>
     </div>
 </div>
+<div class="home">
+    <div class="container container--default" data-equalizer data-equalize-on="medium">
+        <div class="home-title">
+            <h3>In Heidenheim erleben</h3>
+        </div>
+        <div class="home-tile">
+            <div class="experiencetile" data-equalizer-watch>
+                <a href="#" class="experiencetile-image">
+                    <img src="//placekitten.com/400/300"alt="title"/>
+                </a>
+                <a href="#" class="experiencetile-title">
+                    <h3>Title of the Exp.</h3>
+                </a>
+                <span class="experiencetile-owner">
+                    Modehaus Reinhard
+                </span>
+                <div class="experiencetile-details">
+                    <span class="experiencetile-details-date">
+                        31.02.2035
+                    </span>
+                    <span class="experiencetile-details-products">
+                        2 Angebote
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="home-tile">
+            <div class="experiencetile" data-equalizer-watch>
+                <a href="#" class="experiencetile-image">
+                    <img src="//placekitten.com/400/300"alt="title"/>
+                </a>
+                <a href="#" class="experiencetile-title">
+                    <h3>Title of the Exp.</h3>
+                </a>
+                <span class="experiencetile-owner">
+                    Modehaus Reinhard
+                </span>
+                <div class="experiencetile-details">
+                    <span class="experiencetile-details-date">
+                        31.02.2035
+                    </span>
+                    <span class="experiencetile-details-products">
+                        2 Angebote
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="home-tile">
+            <div class="experiencetile" data-equalizer-watch>
+                <a href="#" class="experiencetile-image">
+                    <img src="//placekitten.com/400/300"alt="title"/>
+                </a>
+                <a href="#" class="experiencetile-title">
+                    <h3>Title of the Exp.</h3>
+                </a>
+                <span class="experiencetile-owner">
+                    Modehaus Reinhard
+                </span>
+                <div class="experiencetile-details">
+                    <span class="experiencetile-details-date">
+                        31.02.2035
+                    </span>
+                    <span class="experiencetile-details-products">
+                        2 Angebote
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="home-tile">
+            <div class="experiencetile" data-equalizer-watch>
+                <a href="#" class="experiencetile-image">
+                    <img src="//placekitten.com/400/300"alt="title"/>
+                </a>
+                <a href="#" class="experiencetile-title">
+                    <h3>Title of the Exp.</h3>
+                </a>
+                <span class="experiencetile-owner">
+                    Modehaus Reinhard
+                </span>
+                <div class="experiencetile-details">
+                    <span class="experiencetile-details-date">
+                        31.02.2035
+                    </span>
+                    <span class="experiencetile-details-products">
+                        2 Angebote
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="home-tile">
+            <div class="experiencetile" data-equalizer-watch>
+                <a href="#" class="experiencetile-image">
+                    <img src="//placekitten.com/400/300"alt="title"/>
+                </a>
+                <a href="#" class="experiencetile-title">
+                    <h3>Title of the Exp.</h3>
+                </a>
+                <span class="experiencetile-owner">
+                    Modehaus Reinhard
+                </span>
+                <div class="experiencetile-details">
+                    <span class="experiencetile-details-date">
+                        31.02.2035
+                    </span>
+                    <span class="experiencetile-details-products">
+                        2 Angebote
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="home-tile">
+            <div class="experiencetile" data-equalizer-watch>
+                <a href="#" class="experiencetile-image">
+                    <img src="//placekitten.com/400/300"alt="title"/>
+                </a>
+                <a href="#" class="experiencetile-title">
+                    <h3>Title of the Exp.</h3>
+                </a>
+                <span class="experiencetile-owner">
+                    Modehaus Reinhard
+                </span>
+                <div class="experiencetile-details">
+                    <span class="experiencetile-details-date">
+                        31.02.2035
+                    </span>
+                    <span class="experiencetile-details-products">
+                        2 Angebote
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="home-more">
+            <a href="#">Alle Erlebnisse anzeigen</a>
+        </div>
+    </div>
+</div>
+<div class="home">
+    <div class="container container--default" data-equalizer data-equalize-on="medium">
+        <div class="home-title">
+            <h3>Heidenheim kennen lernen</h3>
+        </div>
+        <div class="home-tile">
 
+        </div>
+    </div>
+</div>
 <div class="footer">
     <div class="footer-inner">
         <div class="container container--default">
