--- a/frontend2/src/scss/components/_entry-tile.scss
+++ b/frontend2/src/scss/components/_entry-tile.scss
@@ -9,6 +9,11 @@
     display: block;
     img {
       width: 100%;
+      height: 150px;
+      object-fit: cover;
+      @include breakpoint(medium) {
+        height: auto;
+      }
     }
     color: $black;
     &:hover {
