--- a/frontend2/src/scss/components/_hero.scss
+++ b/frontend2/src/scss/components/_hero.scss
@@ -4,7 +4,7 @@
 .hero {
   position: relative;
   width: 100%;
-  height: 280px;
+  min-height: 280px;
 
   background-repeat: no-repeat;
   background-size:cover;
@@ -21,6 +21,7 @@
   @include breakpoint(large) {
     height: 580px;
     margin:0 auto;
+    margin-bottom: $spacing*2;
     max-width: rem-calc(1600);
   }
 
@@ -37,6 +38,12 @@
     justify-content: center;
 
     padding: $spacing*2 $spacing;
+
+    text-align: center;
+
+    @include breakpoint(medium) {
+      text-align: left;
+    }
 
     &--is-faded {
       background-color: rgba(0,0,0,.42);
@@ -92,12 +99,16 @@
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    @include breakpoint(medium) {
+      justify-content: flex-start;
+    }
     &-item {
       font-size: rem-calc(13);
       padding-right: $spacing;
+      opacity: .67;
       @include breakpoint(large) {
         padding-right: $spacing*2;
-        opacity: .67;
         transition:.1s;
         &:hover {
           opacity: 1;
