--- a/frontend2/src/templates/directory-entries.html
+++ b/frontend2/src/templates/directory-entries.html
@@ -73,12 +73,12 @@
     </div>
 </div>
 <div class="directory">
-    <div class="container container--default">
+    <div class="container container--default" data-equalizer data-equalize-on="medium">
         <div class="directory-title">
             <h3>Herrenmode</h3>
         </div>
 
-        <div class="directory-entry">
+        <div class="directory-entry" data-equalizer-watch>
             <div class="entrytile">
                 <a href="#" class="entrytile-image">
                     <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
@@ -98,7 +98,7 @@
                 </a>
             </div>
         </div>
-        <div class="directory-entry">
+        <div class="directory-entry"data-equalizer-watch>
             <div class="entrytile">
                 <a href="#" class="entrytile-image">
                     <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
@@ -118,7 +118,7 @@
                 </a>
             </div>
         </div>
-        <div class="directory-entry">
+        <div class="directory-entry" data-equalizer-watch>
             <div class="entrytile">
                 <a href="#" class="entrytile-image">
                     <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
@@ -138,7 +138,7 @@
                 </a>
             </div>
         </div>
-        <div class="directory-entry">
+        <div class="directory-entry" data-equalizer-watch>
             <div class="entrytile">
                 <a href="#" class="entrytile-image">
                     <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
@@ -158,7 +158,7 @@
                 </a>
             </div>
         </div>
-        <div class="directory-entry">
+        <div class="directory-entry"data-equalizer-watch>
             <div class="entrytile">
                 <a href="#" class="entrytile-image">
                     <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
