--- a/frontend2/src/scss/components/_basic.scss
+++ b/frontend2/src/scss/components/_basic.scss
@@ -46,7 +46,7 @@
       }
 
       @include breakpoint(medium) {
-        padding-right: $spacing*2;
+        padding-left: $spacing*2;
         width: 33%;
       }
     }
