--- a/frontend2/src/templates/homepage.html
+++ b/frontend2/src/templates/homepage.html
@@ -228,12 +228,32 @@
         </div>
     </div>
 </div>
-<div class="home">
+<div class="home home--background">
     <div class="container container--default" data-equalizer data-equalize-on="medium">
         <div class="home-title">
             <h3>Heidenheim kennen lernen</h3>
         </div>
         <div class="home-tile">
+            <a href="#" class="articletile">
+                Titel
+
+            </a>
+
+        </div>
+        <div class="home-tile">
+            A
+
+        </div>
+        <div class="home-tile">
+            A
+
+        </div>
+        <div class="home-tile">
+            A
+
+        </div>
+        <div class="home-tile">
+            A
 
         </div>
     </div>
