--- a/frontend2/src/scss/components/_home.scss
+++ b/frontend2/src/scss/components/_home.scss
@@ -2,10 +2,13 @@
 // Homepage elements
 //
 
+
 .home {
-  padding-bottom: $spacing*2;
+  padding-bottom: $spacing;
   &--background {
     background-color: $light-gray;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
   &-title {
     @include grid-col(12);
@@ -15,7 +18,6 @@
       padding-bottom: $spacing*2;
     }
   }
-
   &-tile {
     @include grid-col(12);
     padding-bottom: $spacing;
