--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -64,6 +64,6 @@
 @import 'components/hero';
 @import 'components/home';
 @import 'components/experience-tile';
-@import 'components/storys-tile';
+@import 'components/article-tile';
 @import 'components/discover-tile';
 @import 'components/event-tile';
