--- a/frontend2/src/templates/homepage.html
+++ b/frontend2/src/templates/homepage.html
@@ -234,42 +234,13 @@
                 <h3>Geschichten aus Heidenheim</h3>
             </div>
             <div class="home-tile">
-                <div class="storystile" data-equalizer-watch>
-                    <a href="#" class="storystile-image">
-                        <img src="//placekitten.com/400/500" alt="title" />
+                <div class="articletile1" style="background-image:url('//placekitten.com/500/500');">
+                    <a href="#" class="articletile1-overlay">
+                        <div class="articletile1-inner">
+                            <h3>Artikeltitel</h3>
+                            Soemthing
+                        </div>
                     </a>
-                    <a href="#" class="storystile-title">
-                        <h3>Title of the Exp.</h3>
-                    </a>
-                    <span class="storystile-owner">
-                        Nubuk Bike + Sport
-                    </span>
-                </div>
-            </div>
-            <div class="home-tile">
-                <div class="storystile" data-equalizer-watch>
-                    <a href="#" class="storystile-image">
-                        <img src="//placekitten.com/400/500" alt="title" />
-                    </a>
-                    <a href="#" class="storystile-title">
-                        <h3>Title of the Exp.</h3>
-                    </a>
-                    <span class="storystile-owner">
-                        Nubuk Bike + Sport
-                    </span>
-                </div>
-            </div>
-            <div class="home-tile">
-                <div class="storystile" data-equalizer-watch>
-                    <a href="#" class="storystile-image">
-                        <img src="//placekitten.com/400/500" alt="title" />
-                    </a>
-                    <a href="#" class="storystile-title">
-                        <h3>Title of the Exp.</h3>
-                    </a>
-                    <span class="storystile-owner">
-                        Nubuk Bike + Sport
-                    </span>
                 </div>
             </div>
             <div class="home-more">
@@ -277,7 +248,7 @@
             </div>
         </div>
     </div>
-<div class="home home--background">
+<div class="home home--spaced home--background">
         <div class="container container--default" data-equalizer data-equalize-on="medium">
             <div class="home-title home-title--green">
                 <h3>Heidenheim entdecken</h3>
@@ -420,45 +391,44 @@
             </div>
         </div>
     </div>
-    <div class="home">
+    <div class="home home--spaced">
         <div class="container container--default" data-equalizer data-equalize-on="medium">
             <div class="home-title">
                 <h3>Veranstaltungen</h3>
             </div>
-            <div class="home-tile">
-                <div class="eventtile" data-equalizer-watch>
-                    <a href="#" class="eventtile-image">
-                        <img src="//placekitten.com/200/300" alt="title" />
-                    </a>
-                </div>
+            <div class="home-event">
+                <a href="#" class="eventtile">
+                    <div class="eventtile-image">
+                        <img src="https://www.heidenheimerleben.de/site/assets/files/10759/2019-10_vos.400x0.jpg" alt="Event name"/>
+                    </div>
+                </a>
             </div>
-            <div class="home-tile">
-                <div class="experiencetile" data-equalizer-watch>
-                    <a href="#" class="eventtile-image">
-                        <img src="//placekitten.com/200/300" alt="title" />
-                    </a>
-                </div>
+            <div class="home-event">
+                <a href="#" class="eventtile">
+                    <div class="eventtile-image">
+                        <img src="https://www.heidenheimerleben.de/site/assets/files/10759/2019-10_vos.400x0.jpg" alt="Event name"/>
+                    </div>
+                </a>
             </div>
-            <div class="home-tile">
-                <div class="experiencetile" data-equalizer-watch>
-                    <a href="#" class="eventtile-image">
-                        <img src="//placekitten.com/200/300" alt="title" />
-                    </a>
-                </div>
+            <div class="home-event">
+                <a href="#" class="eventtile">
+                    <div class="eventtile-image">
+                        <img src="https://www.heidenheimerleben.de/site/assets/files/10759/2019-10_vos.400x0.jpg" alt="Event name"/>
+                    </div>
+                </a>
             </div>
-            <div class="home-tile">
-                <div class="experiencetile" data-equalizer-watch>
-                    <a href="#" class="eventtile-image">
-                        <img src="//placekitten.com/200/300" alt="title" />
-                    </a>
-                </div>
+            <div class="home-event">
+                <a href="#" class="eventtile">
+                    <div class="eventtile-image">
+                        <img src="https://www.heidenheimerleben.de/site/assets/files/10759/2019-10_vos.400x0.jpg" alt="Event name"/>
+                    </div>
+                </a>
             </div>
             <div class="home-more">
                 <a href="#">Alle Artikel lesen</a>
             </div>
-        </div>
     </div>
-
+    </div>
     <div class="footer">
         <div class="footer-inner">
             <div class="container container--default">
