--- a/frontend2/src/scss/components/_event-tile.scss
+++ b/frontend2/src/scss/components/_event-tile.scss
@@ -2,23 +2,11 @@
 // tile for an experience
 //
 .eventtile {
-  padding: $spacing*2 0;
-
+  padding: $spacing 0;
   &-image {
-  @include grid-col(12);
-    display: flex;
-    flex-direction: column;
-    margin-left: -$spacing;
-    margin-right: -$spacing;
-
-    @include breakpoint(medium) {
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-    }
-    
     img {
-      max-height: 300px;
+      width: 100%;
+      height: auto;
     }
   }
 }
