Image description changed

--- a/frontend2/src/templates/homepage.html
+++ b/frontend2/src/templates/homepage.html
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="hero-author">
-            "Skyline Dreams" von <a href="#">Philipp Reiner</a>
+            <p>"Skyline Dreams" von <a href="#">Philipp Reiner</a></p>
         </div>
     </div>
     <div class="home">
