--- a/frontend2/src/scss/components/_directory.scss
+++ b/frontend2/src/scss/components/_directory.scss
@@ -73,6 +73,7 @@
       justify-content: center;
       color: #fff;
       transition:.1s;
+      text-align: center;
       &:hover {
         cursor: pointer;
         background-color: rgba($primary-color,1);
