--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -23,6 +23,7 @@
     <a href="directory-entries.html" class="button">Directory Entries</a>
     <a href="search.html" class="button">Search (Zero)</a>
     <a href="homepage.html" class="button">Homepage</a>
+    <a href="parking.html" class="button">Parking</a>
 
 </div>
 </body>
