Experience page (part 1)

--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -67,3 +67,5 @@
 @import 'components/article-tile';
 @import 'components/discover-tile';
 @import 'components/event-tile';
+@import 'components/imagehead';
+@import 'components/experience';
