--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -24,6 +24,7 @@
     <a href="search.html" class="button">Search (Zero)</a>
     <a href="homepage.html" class="button">Homepage</a>
     <a href="parking.html" class="button">Parking</a>
+    <a href="experience.html" class="button">Experience</a>
 
 </div>
 </body>
