--- a/frontend2/src/scss/components/_banner.scss
+++ b/frontend2/src/scss/components/_banner.scss
@@ -13,6 +13,8 @@
   }
   &-icon {
     padding: $spacing;
+    display: flex;
+    align-items: center;
     @include breakpoint(medium) {
       padding: $spacing*2;
       padding-right: 0;
@@ -26,6 +28,10 @@
       padding: $spacing*2;
       text-align: left;
       flex-grow: 1;
+    }
+    a {
+      color: $primary-color;
+      text-decoration: underline;
     }
   }
   &-actions {
