Experience pages examples

--- a/frontend2/src/templates/experience.html
+++ b/frontend2/src/templates/experience.html
@@ -133,7 +133,38 @@
             <br>
             <a href="#entrymitscrollzukontakt">Zur Karte</a>
         </div>
+        <div class="experience-title">
+            <h3>Angebote und Produkte</h3>
+        </div>
+        <div class="experience-product">
+            Product tile here
+        </div>
+        <div class="experience-product">
+            Product tile here
+        </div>
+        <div class="experience-product">
+            Product tile here
+        </div>
+        <div class="experience-product">
+            Product tile here
+        </div>
+        <div class="experience-title">
+            <h3>Wer machts?</h3>
+        </div>
+        <div class="experience-host">
+            <div class="experience-host-image">
+                <a href="#">
+                    <img src="//placekitten.com/300/200" alt="Reinhard"/>
+                </a>
+            </div>
+            <div class="experience-host-meta">
+                <h3>Reinhard Mode</h3>
+                <p>Reinhard Mode ein Modehaus aus Tradition. Seit Generationen stehen wir für beste Qualität, hochwertige Marken und erstklassigen Service zu (…) </p>
+                <a href="#" class="button primary">Mehr erfahren</a>
+            </div>
+        </div>
     </div>
+
 </div>
 
 <div class="footer">
