--- a/frontend2/src/scss/components/_experience.scss
+++ b/frontend2/src/scss/components/_experience.scss
@@ -37,4 +37,45 @@
     font-size: 30px;
     color: $primary-color;
   }
+  &-title {
+   @include grid-col(12);
+    padding-top: $spacing*2;
+    padding-bottom: $spacing;
+    @include breakpoint(medium) {
+      padding-top: 50px;
+    }
+  }
+  &-product {
+   @include grid-col(12);
+    padding-bottom: $spacing;
+    @include breakpoint(medium) {
+      @include grid-col(6);
+      padding-bottom: $spacing*2;
+    }
+  }
+  &-host {
+    @include grid-col(12);
+    padding-top: $spacing;
+    padding-bottom: $spacing*2;
+
+    display: flex;
+    flex-direction: column;
+
+    @include breakpoint(medium) {
+      flex-direction: row;
+      align-items: flex-start;
+    }
+    &-image {
+      padding-bottom: $spacing;
+      @include breakpoint(medium) {
+        padding-right: $spacing*2;
+        width: 25%;
+      }
+    }
+    &-meta {
+      @include breakpoint(medium) {
+        width: 75%;
+      }
+    }
+  }
 }
