--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -69,3 +69,4 @@
 @import 'components/event-tile';
 @import 'components/imagehead';
 @import 'components/experience';
+@import 'components/articles';
