--- a/frontend2/src/templates/experience-alternativ.html
+++ b/frontend2/src/templates/experience-alternativ.html
@@ -54,18 +54,16 @@
         </div>
     </div>
 </div>
-<div class="imagehead">
-    <div class="imagehead-main" style="background-image:url('https://abload.de/img/9435829689_22f0f0c05c0iktc.jpg');">
-        <div class="imagehead-inner">
-            <div class="imagehead-title">
-                <h1>
-                    Modeschau im Frühjahr
-                </h1>
-            </div>
+<div class="posterhead">
+    <div class="container container--slim">
+        <div class="posterhead-inner">
+            <!-- So mit etwa 700px ausgeben. !-->
+            <img src="https://www.heidenheimerleben.de/site/assets/files/10760/2019-11_plakat_blagg_freidag_2019.jpg" alt="BLÄGG FREIDAG"/>
+            <h1 class="posterhead-title">BLÄGG FREIDAG</h1>
         </div>
     </div>
 </div>
-<div class="container sticky">
+<div class="container container--slim sticky">
     <div class="sitenav sitenav--slim">
         <div class="sitenav-inner">
             <ul class="sitenav-items">
