--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -25,7 +25,8 @@
     <a href="homepage.html" class="button">Homepage</a>
     <a href="parking.html" class="button">Parking</a>
     <a href="experience.html" class="button">Experience</a>
-
+    <a href="experience-alternativ.html" class="button">Experience mit Plakat</a>
+    <a href="articles.html" class="button">Articles</a>
 </div>
 </body>
 </html>
