--- a/frontend2/src/templates/entry.html
+++ b/frontend2/src/templates/entry.html
@@ -240,7 +240,29 @@
         </a>
     </div>
 </div>
-
+<div class="entryarticle">
+    <div class="container container--default">
+        <div class="article article--has-background">
+            <div class="article-content">
+                <iframe src="https://www.youtube.com/embed/9aao982p5E0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="article-meta">
+                <div class="article-meta-head">
+                    <h2>Titel des Artikels</h2>
+                    <p>Some description goes jhere</p>
+                </div>
+                <div class="article-meta-actions">
+                    <a href="#linktoheidenheimerzeitung" class="button">
+                        Auf HZ.de lesen
+                    </a>
+                    <a href="#linktoentry" class="button">
+                        Über {Entry->Title}
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="entrycontact">
     <div class="container container--default">
         <div class="entrycontact-title">
