--- a/frontend2/src/templates/entry.html
+++ b/frontend2/src/templates/entry.html
@@ -123,6 +123,24 @@
                 Ein Einkaufserlebnis der Extraklasse.
                 <br><a href="#showmorejsstuff">Weiterlesen (…)</a>
             </p>
+            <ul class="entry-basics-brands">
+                <li class="entry-basics-brands-title">Unsere Marken</li>
+                <li class="entry-basics-brands-item">
+                    <a href="#">
+                        <img src="//placekitten.com/70/30" alt="Brand Name"/>
+                    </a>
+                </li>
+                <li class="entry-basics-brands-item">
+                    <a href="#">
+                       Samsung
+                    </a>
+                </li>
+                <li class="entry-basics-brands-item">
+                    <a href="#">
+                        Apple
+                    </a>
+                </li>
+            </ul>
             <div class="entry-bascis-links">
                 <a class="button medium" href="#">
                     <i class="far fa-globe"></i>
