--- a/frontend2/src/templates/entry.html
+++ b/frontend2/src/templates/entry.html
@@ -63,6 +63,12 @@
                          src="https://www.heidenheimerleben.de/site/templates/assets/hdh-logo.jpg"/>
                 </h1>
             </div>
+            <iframe
+                    src="https://player.twitch.tv/?channel=nubuk_funandbike&parent=heidenheimerleben.de&muted=true"
+                    frameborder="0"
+                    scrolling="no"
+                    allowfullscreen="true">
+            </iframe>
         </div>
         <div class="entryhead-more">
             <div class="entryhead-logo">
