--- a/frontend2/src/scss/components/_entry-head.scss
+++ b/frontend2/src/scss/components/_entry-head.scss
@@ -26,6 +26,18 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
+
+    position: relative;
+    iframe {
+      position: absolute;
+      top:0;
+      left:0;
+      bottom:0;
+      right:0;
+      width:100%;
+      height:100%;
+    }
+
     &-title {
       background-color: $white;
       color: $black;
