--- a/frontend2/src/scss/components/_experience-tile.scss
+++ b/frontend2/src/scss/components/_experience-tile.scss
@@ -9,10 +9,10 @@
     img {
       width: 100%;
       height: 150px;
-      object-fit: cover;
+      object-fit: contain;
       border-radius: $global-radius;
       @include breakpoint(medium) {
-        height: auto;
+        height: 260px;
       }
     }
   }
