--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -70,3 +70,4 @@
 @import 'components/imagehead';
 @import 'components/experience';
 @import 'components/articles';
+@import 'components/entry-order';
