--- a/frontend2/src/templates/entry-live.html
+++ b/frontend2/src/templates/entry-live.html
@@ -57,12 +57,6 @@
 <div class="container">
     <div class="entryhead">
         <div class="entryhead-main" style="background-image:url('http://placekitten.com/1200/400')">
-            <div class="entryhead-main-title">
-                <h1>Reinhard Mode
-                    <img alt="H.D.H. Mitglied"
-                         src="https://www.heidenheimerleben.de/site/templates/assets/hdh-logo.jpg"/>
-                </h1>
-            </div>
             <iframe
                     src="https://player.twitch.tv/?channel=nubuk_funandbike&parent=heidenheimerleben.de&muted=true"
                     frameborder="0"
@@ -71,14 +65,85 @@
             </iframe>
         </div>
         <div class="entryhead-more">
-            <div class="entryhead-logo">
-                <img alt="Reinhard Mode"
-                     src="https://www.heidenheimerleben.de/site/assets/files/8864/reinhard_logo_zw_4c_rz_neu.jpg"/>
-            </div>
-            <div class="entryhead-gallery" style="background-image:url('http://placekitten.com/400/300')">
-                <a class="entryhead-gallery-label" href="#gallery">
-                    Alle Fotos (4)
-                </a>
+            <div class="entryhead-live">
+                <div class="entryhead-live-meta">
+                    <img alt="Reinhard Mode"
+                         src="https://www.heidenheimerleben.de/site/assets/files/8864/reinhard_logo_zw_4c_rz_neu.jpg"/>
+                    <h1>Reinhard Mode</h1>
+                    <div class="entryhead-live-actions">
+                        <a class="button primary" href="#">
+                            <i class="far fa-phone"></i>
+                            07321 1234 6789
+                        </a>
+                    </div>
+                </div>
+                <div class="entryhead-live-shows">
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            23.03 - 15:00
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            Die neuen Mountainbikes
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            23.03 - 15:00
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            Die neuen Mountainbikes
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            23.03 - 15:00
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            Die neuen Mountainbikes
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            23.03 - 15:00
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            Die neuen Mountainbikes
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            23.03 - 15:00
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            Die neuen Mountainbikes
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -88,30 +153,40 @@
         <div class="sitenav-inner">
             <ul class="sitenav-items">
                 <li class="sitenav-item">
-                    <a class="is-active" href="#scrollto">Info</a>
+                    <a class="is-active" href="#scrollto">Bestellen</a>
                 </li>
                 <li class="sitenav-item">
+                    <a  href="#scrollto">Info</a>
+                </li>
+                <li class="sitenav-item hidden">
                     <a href="#scrollto">Erleben</a>
                 </li>
                 <li class="sitenav-item">
-                    <a href="#scrollto">Produkte</a>
+                    <a href="#scrollto">Kontakt</a>
                 </li>
                 <li class="sitenav-item">
-                    <a href="#scrollto">Kontakt</a>
+                    <a href="#scrollto">Bilder</a>
                 </li>
             </ul>
             <div class="sitenav-actions">
                 <a class="button primary" href="#">
                     <i class="far fa-star"></i>
                     212
-                    <span class="button-separator"></span>
-                    Empfehlen
                 </a>
             </div>
         </div>
     </div>
 </div>
-
+<div class="entry-order">
+    <div class="entry-order-inner container container--default">
+        <div class="entry-order-title">
+            <h3>Bestellen</h3>
+            <p>Die folgenden Artikel können Sie bestellen {Freitext aus entry z.b. mit liefertext)</p>
+        </div>
+        Artikelname / Beschreibung / Preis / In den Warenkorb
+        <br>Bestellen->
+    </div>
+</div>
 <div class="entry-basics">
     <div class="entry-basics-inner container container--default">
         <div class="entry-basics-text">
@@ -169,9 +244,6 @@
         <div class="entry-basics-businesshours">
             <h3>Öffnungszeiten</h3>
             <ul class="business-times">
-                <div class="business-times-stop">
-                    Durch die aktuelle Situation kann es zu Einschränkungen in den Öffnungszeiten kommen.
-                </div>
                 <li class="business-times-item">
                     <div class="business-times-day">Montag</div>
                     <div class="business-times-hours">09:30-18:00</div>
