--- a/frontend2/src/scss/components/_entry-basics.scss
+++ b/frontend2/src/scss/components/_entry-basics.scss
@@ -174,6 +174,7 @@
     margin: 0;
     list-style: none;
     line-height: 1.8;
+    position: relative;
     &-item {
       display: flex;
       align-items: center;
@@ -185,7 +186,20 @@
     &-day {
       flex-grow: 1;
     }
+    &-stop {
+      position: absolute;
+      top:0;
+      left:0;
+      right:0;
+      bottom:0;
+      background-color: rgba($white,0.95);
+      text-align: center;
+      padding: $spacing*2;
+      padding-top: 30px;
+      color: $dark-gray;
+    }
   }
+
 }
 
 .entryarticle {
