--- a/frontend2/src/scss/components/_entry-tile.scss
+++ b/frontend2/src/scss/components/_entry-tile.scss
@@ -11,6 +11,7 @@
       width: 100%;
       height: 150px;
       object-fit: cover;
+      border-radius: $global-radius;
       @include breakpoint(medium) {
         height: auto;
       }
