--- a/frontend2/src/templates/homepage-live.html
+++ b/frontend2/src/templates/homepage-live.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-
+<div class="globalnotice">
+    <div class="globalnotice-inner">
+        Notice goes here
+    </div>
+</div>
     <div class="header">
         <div class="header-inner header-inner--has-border">
             <div class="header-logo">
